@@ -1,8 +1,14 @@
 package rbasamoyai.createbigcannons.mixin.compat.create;
 
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Map;
+import java.util.Set;
+
 import javax.annotation.Nullable;
 
 import org.spongepowered.asm.mixin.Mixin;
+import org.spongepowered.asm.mixin.Unique;
 
 import com.simibubi.create.content.contraptions.TranslatingContraption;
 import com.simibubi.create.content.contraptions.pulley.PulleyBlockEntity;
@@ -11,19 +17,16 @@ import com.simibubi.create.content.contraptions.pulley.PulleyContraption;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.world.level.Level;
-
-import org.spongepowered.asm.mixin.Unique;
-
+import net.minecraft.world.level.block.state.BlockState;
 import rbasamoyai.createbigcannons.cannon_loading.CanLoadBigCannon;
-
-import java.util.HashSet;
-import java.util.Set;
+import rbasamoyai.createbigcannons.remix.HasFragileContraption;
 
 @Mixin(PulleyContraption.class)
-public abstract class PulleyContraptionMixin extends TranslatingContraption implements CanLoadBigCannon {
+public abstract class PulleyContraptionMixin extends TranslatingContraption implements CanLoadBigCannon, HasFragileContraption {
 
 	@Unique private final Set<BlockPos> fragileBlocks = new HashSet<>();
 	@Unique private final Set<BlockPos> colliderBlocks = new HashSet<>();
+	@Unique private final Map<BlockPos, BlockState> encounteredBlocks = new HashMap<>();
 	@Unique private boolean brokenDisassembly = false;
 
     @Override public void createbigcannons$setBrokenDisassembly(boolean flag) { this.brokenDisassembly = flag; }
@@ -44,5 +47,7 @@ public abstract class PulleyContraptionMixin extends TranslatingContraption impl
     @Override public Set<BlockPos> createbigcannons$getFragileBlockPositions() { return this.fragileBlocks; }
 
     @Override public Set<BlockPos> createbigcannons$getCannonLoadingColliders() { return this.colliderBlocks; }
+
+	@Override public Map<BlockPos, BlockState> createbigcannons$getEncounteredBlocks() { return this.encounteredBlocks; }
 
 }
